--- a/config/core/configmaps/observability.yaml
+++ b/config/core/configmaps/observability.yaml
@@ -20,8 +20,10 @@ metadata:
   labels:
     events.cloud.google.com/release: devel
   annotations:
-    knative.dev/example-checksum: 8544d216
+    knative.dev/example-checksum: 2e88be56
 data:
+  metrics.backend-destination: stackdriver
+  metrics.reporting-period-seconds: 60
   _example: |
     ################################
     #                              #
@@ -58,6 +60,4 @@ data:
     # stackdriver-custom-metrics-subdomain is the subdomain to use when sending custom metrics to StackDriver.
     # If not specified, the default is set to "knative.dev".
     # If metrics.backend-destination is not Stackdriver, this is ignored.
-    metrics.stackdriver-custom-metrics-subdomain: "<your subdomain>"
-  metrics.backend-destination:      "stackdriver",
-  metrics.reporting-period-seconds: "60",
+    metrics.stackdriver-custom-metrics-subdomain: "<your subdomain>
