Set Stackdriver as default metrics backend (#1302)
* Set Stackdriver as default metrics backend

And set sampling period to 60 seconds

* Fixes

* More Fixes

* Undo _example changes

* Stringify number

--- a/config/core/configmaps/observability.yaml
+++ b/config/core/configmaps/observability.yaml
@@ -22,6 +22,8 @@ metadata:
   annotations:
     knative.dev/example-checksum: 4df07073
 data:
+  metrics.backend-destination: stackdriver
+  metrics.reporting-period-seconds: "60"
   _example: |
     ################################
     #                              #
