Add the events.cloud.google.com/initialized annotation.

--- a/config/core/configmaps/gcp-auth.yaml
+++ b/config/core/configmaps/gcp-auth.yaml
@@ -20,6 +20,7 @@ metadata:
   labels:
     events.cloud.google.com/release: devel
   annotations:
+    events.cloud.google.com/initialized: "false"
     knative.dev/example-checksum: 6642f8a8
 data:
   default-auth-config: |
