--- a/pkg/reconciler/brokercell/testingdata/ingress_deployment.yaml
+++ b/pkg/reconciler/brokercell/testingdata/ingress_deployment.yaml
@@ -50,6 +50,15 @@ spec:
           periodSeconds: 2
           successThreshold: 1
           timeoutSeconds: 5
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /healthz
+            port: 8080
+            scheme: HTTP
+          periodSeconds: 2
+          successThreshold: 1
+          timeoutSeconds: 5
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /var/secrets/google/key.json        
