Update all examples in docs to use v1beta1

--- a/docs/install/config-br-default-channel.yaml
+++ b/docs/install/config-br-default-channel.yaml
@@ -19,7 +19,7 @@ metadata:
   namespace: cloud-run-events
 data:
   channelTemplateSpec: |
-    apiVersion: messaging.cloud.google.com/v1alpha1
+    apiVersion: messaging.cloud.google.com/v1beta1
     kind: Channel
     Spec:
 #  # If running with workload identity enabled, update spec.googleServiceAccount.
