--- a/docs/examples/channel/source.yaml
+++ b/docs/examples/channel/source.yaml
@@ -21,6 +21,6 @@ spec:
   schedule: '*/1 * * * *'
   sink:
     ref:
-      apiVersion: messaging.cloud.google.com/v1alpha1
+      apiVersion: messaging.cloud.google.com/v1beta1
       kind: Channel
       name: demo
