--- a/docs/examples/channel/subscription.yaml
+++ b/docs/examples/channel/subscription.yaml
@@ -18,7 +18,7 @@ metadata:
   name: demo
 spec:
   channel:
-    apiVersion: messaging.cloud.google.com/v1alpha1
+    apiVersion: messaging.cloud.google.com/v1beta1
     kind: Channel
     name: demo
   subscriber:
