--- a/docs/examples/cloudauditlogssource/cloudauditlogssource.yaml
+++ b/docs/examples/cloudauditlogssource/cloudauditlogssource.yaml
@@ -1,4 +1,4 @@
-apiVersion: events.cloud.google.com/v1alpha1
+apiVersion: events.cloud.google.com/v1beta1
 kind: CloudAuditLogsSource
 metadata:
   name: cloudauditlogssource-test
