--- a/docs/install/patch-default-ch-config-with-pubsub.yaml
+++ b/docs/install/patch-default-ch-config-with-pubsub.yaml
@@ -16,9 +16,9 @@ data:
   # Configuration for defaulting channels that do not specify CRD implementations.
   default-ch-config: |
     clusterDefault:
-      apiVersion: messaging.cloud.google.com/v1alpha1
+      apiVersion: messaging.cloud.google.com/v1beta1
       kind: Channel
     namespaceDefaults:
       some-namespace:
-        apiVersion: messaging.cloud.google.com/v1alpha1
+        apiVersion: messaging.cloud.google.com/v1beta1
         kind: Channel
