Update docs with new event atttibutes (types, source, etc.)

--- a/docs/examples/cloudschedulersource/cloudschedulersource.yaml
+++ b/docs/examples/cloudschedulersource/cloudschedulersource.yaml
@@ -18,7 +18,7 @@ metadata:
   name: scheduler-test
 spec:
   location: "us-central1"
-  data: "my test data"
+  data: "scheduler custom data"
   schedule: "* * * * *"
   sink:
     ref:
