draft for adding hpa knobs to gcp-broker

--- a/config/core/resources/brokercell.yaml
+++ b/config/core/resources/brokercell.yaml
@@ -56,6 +56,37 @@ spec:
       properties:
         spec:
           type: object
+          properties:
+            components:
+              type: object
+              properties:
+                fanout:
+                  type: object
+                  properties:
+                    minReplicas:
+                      type: integer
+                      format: int64
+                    maxReplicas:
+                      type: integer
+                      format: int64
+                ingress:
+                  type: object
+                  properties:
+                    minReplicas:
+                      type: integer
+                      format: int64
+                    maxReplicas:
+                      type: integer
+                      format: int64
+                retry:
+                  type: object
+                  properties:
+                    minReplicas:
+                      type: integer
+                      format: int64
+                    maxReplicas:
+                      type: integer
+                      format: int64
         status:
           type: object
           properties:
