--- a/config/upgrade/v0.16.0/upgrade.yaml
+++ b/config/upgrade/v0.16.0/upgrade.yaml
@@ -1,3 +1,50 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: v016-upgrader
+  namespace: cloud-run-events
+  labels:
+    events.cloud.google.com/release: devel
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: cloud-run-events-v016-upgrader
+  labels:
+    events.cloud.google.com/release: devel
+rules:
+
+- apiGroups:
+    - pubsub.cloud.google.com
+  resources:
+    - pullsubscriptions
+    - topics
+  verbs:
+    - deletecollection
+
+- apiGroups:
+    - ""
+  resources:
+    - namespaces
+  verbs:
+    - list
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cloud-run-events-v016-upgrader
+  namespace: cloud-run-events
+  labels:
+    events.cloud.google.com/release: devel
+subjects:
+- kind: ServiceAccount
+  name: v016-upgrader
+  namespace: cloud-run-events
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cloud-run-events-v016-upgrader
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -11,7 +58,7 @@ spec:
       annotations:
         sidecar.istio.io/inject: "false"
     spec:
-      serviceAccountName: controller
+      serviceAccountName: v016-upgrader
       restartPolicy: Never
       containers:
       - name: upgrade-brokers
