Explicitly disallow istio sidecar injection for certain workloads

--- a/config/core/deployments/controller.yaml
+++ b/config/core/deployments/controller.yaml
@@ -30,6 +30,8 @@ spec:
       labels:
         app: cloud-run-events
         role: controller
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: controller
       containers:
