--- a/pkg/reconciler/brokercell/testingdata/fanout_deployment.yaml
+++ b/pkg/reconciler/brokercell/testingdata/fanout_deployment.yaml
@@ -35,6 +35,8 @@ spec:
   template:
     metadata:
       labels: *labels
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: broker
       containers:
