--- a/pkg/reconciler/brokercell/testingdata/retry_deployment_with_status.yaml
+++ b/pkg/reconciler/brokercell/testingdata/retry_deployment_with_status.yaml
@@ -36,6 +36,8 @@ spec:
   template:
     metadata:
       labels: *labels
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: broker
       containers:
