Update the templates based on drift from master.

--- a/config/core/resources/cloudbuildsource.gofmt.yaml
+++ b/config/core/resources/cloudbuildsource.gofmt.yaml
@@ -41,10 +41,14 @@ spec:
   subresources:
     status: {}
   preserveUnknownFields: false
+  {{- replace_with 2 "conversion_webhook" }}
   additionalPrinterColumns:
     {{- replace_with 4 "ready_reason_age" }}
   versions:
     - name: v1alpha1
+      served: true
+      storage: false
+    - name: v1beta1
       served: true
       storage: true
   validation:
