--- a/config/core/resources/cloudauditlogssource.yaml
+++ b/config/core/resources/cloudauditlogssource.yaml
@@ -43,14 +43,14 @@ spec:
       # conversionReviewVersions indicates what ConversionReview versions are understood/preferred by the webhook.
       # The first version in the list understood by the API server is sent to the webhook.
       # The webhook must respond with a ConversionReview object in the same version it received.
-      conversionReviewVersions: ["v1beta1", "v1", "v1alpha1"]
+      conversionReviewVersions: ["v1beta1", "v1"]
       clientConfig:
         service:
           name: webhook
           namespace: cloud-run-events
   versions:
   - &version
-    name: v1alpha1
+    name: v1
     served: true
     storage: false
     subresources:
@@ -65,10 +65,11 @@ spec:
     - name: Age
       type: date
       jsonPath: .metadata.creationTimestamp
+    # We remove status.ServiceAccountName from the schema in v1.
     schema:
-      openAPIV3Schema:
+      openAPIV3Schema: &openAPIV3Schema
         type: object
-        properties:
+        properties: &properties
           spec:
             type: object
             required:
@@ -144,9 +145,9 @@ spec:
                 type: string
               resourceName:
                 type: string
-          status:
+          status: &status
             type: object
-            properties:
+            properties: &statusProperties
               observedGeneration:
                 type: integer
                 format: int64
@@ -171,8 +172,6 @@ spec:
                   required:
                     - type
                     - status
-              serviceAccountName:
-                type: string
               sinkUri:
                 type: string
               ceAttributes:
@@ -194,139 +193,25 @@ spec:
                 type: string
                 description: >
                   ID of the Stackdriver sink used to publish audit log messages.
-  - << : *version
+  - <<: *version
+    name: v1alpha1
+    served: true
+    storage: false
+    # v1alpha1 and v1beta have status.properties.serviceAccountName in the schema
+    schema: &v1alpha1Schema
+      openAPIV3Schema:
+        <<: *openAPIV3Schema
+        properties:
+          <<: *properties
+          status:
+            <<: *status
+            properties:
+              <<: *statusProperties
+              serviceAccountName:
+                type: string
+  - <<: *version
     name: v1beta1
     served: true
     storage: true
-  - <<: *version
-    name: v1
-    served: true
-    storage: false
-    # We remove status.ServiceAccountName from the schema in v1.
-    schema:
-      openAPIV3Schema:
-        type: object
-        properties:
-          spec:
-            type: object
-            required:
-              - sink
-              - serviceName
-              - methodName
-            properties:
-              sink:
-                type: object
-                description: >
-                  Sink which receives the notifications.
-                properties:
-                  uri:
-                    type: string
-                    minLength: 1
-                  ref:
-                    type: object
-                    required:
-                      - apiVersion
-                      - kind
-                      - name
-                    properties:
-                      apiVersion:
-                        type: string
-                        minLength: 1
-                      kind:
-                        type: string
-                        minLength: 1
-                      namespace:
-                        type: string
-                      name:
-                        type: string
-                        minLength: 1
-              ceOverrides:
-                type: object
-                description: >
-                  Defines overrides to control modifications of the event sent to the sink.
-                properties:
-                  extensions:
-                    type: object
-                    description: >
-                      Extensions specify what attribute are added or overridden on the outbound event. Each
-                      `Extensions` key-value pair are set on the event as an attribute extension independently.
-                    x-kubernetes-preserve-unknown-fields: true
-              serviceAccountName:
-                type: string
-                description: >
-                  Kubernetes service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription.
-                  The value of the Kubernetes service account must be a valid DNS subdomain name.
-                  (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)
-              secret:
-                type: object
-                description: >
-                  Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the
-                  Subscription, only to poll it. The value of the secret entry must be a service account key in
-                  the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys).
-                  Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'.
-                properties:
-                  name:
-                    type: string
-                  key:
-                    type: string
-                  optional:
-                    type: boolean
-              project:
-                type: string
-                description: >
-                  Google Cloud Project ID of the project into which the topic should be created. If omitted uses
-                  the Project ID from the GKE cluster metadata service.
-              serviceName:
-                type: string
-              methodName:
-                type: string
-              resourceName:
-                type: string
-          status:
-            type: object
-            properties:
-              observedGeneration:
-                type: integer
-                format: int64
-              conditions:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    lastTransitionTime:
-                      # We use a string in the stored object but a wrapper object at runtime.
-                      type: string
-                    message:
-                      type: string
-                    reason:
-                      type: string
-                    severity:
-                      type: string
-                    status:
-                      type: string
-                    type:
-                      type: string
-                  required:
-                    - type
-                    - status
-              sinkUri:
-                type: string
-              ceAttributes:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    type:
-                      type: string
-                    source:
-                      type: string
-              projectId:
-                type: string
-              topicId:
-                type: string
-              subscriptionId:
-                type: string
-              stackdriverSink:
-                type: string
-                description: >
-                  ID of the Stackdriver sink used to publish audit log messages.
+    # the schema of v1beta1 is exactly the same as v1alpha1 schema
+    schema: *v1alpha1Schema
