Re-factoring (feedback): (1) new data contract; (2) webhook validation

--- a/config/core/resources/brokercell.yaml
+++ b/config/core/resources/brokercell.yaml
@@ -68,14 +68,23 @@ spec:
                       format: int64
                     avgMemoryUsage:
                       type: string
-                    cpuRequest:
-                      type: string
-                    cpuLimit:
-                      type: string
-                    memoryRequest:
-                      type: string
-                    memoryLimit:
-                      type: string
+                    resources:
+                      type: object
+                      properties:
+                        requests:
+                          type: object
+                          properties:
+                            cpu:
+                              type: string
+                            memory:
+                              type: string
+                        limits:
+                          type: object
+                          properties:
+                            cpu:
+                              type: string
+                            memory:
+                              type: string
                     minReplicas:
                       type: integer
                       format: int64
@@ -89,15 +98,24 @@ spec:
                       type: integer
                       format: int64
                     avgMemoryUsage:
-                        type: string
-                    cpuRequest:
                       type: string
-                    cpuLimit:
-                      type: string
-                    memoryRequest:
-                      type: string
-                    memoryLimit:
-                      type: string
+                    resources:
+                      type: object
+                      properties:
+                        requests:
+                          type: object
+                          properties:
+                            cpu:
+                              type: string
+                            memory:
+                              type: string
+                        limits:
+                          type: object
+                          properties:
+                            cpu:
+                              type: string
+                            memory:
+                              type: string
                     minReplicas:
                       type: integer
                       format: int64
@@ -111,15 +129,24 @@ spec:
                       type: integer
                       format: int64
                     avgMemoryUsage:
-                        type: string
-                    cpuRequest:
                       type: string
-                    cpuLimit:
-                      type: string
-                    memoryRequest:
-                      type: string
-                    memoryLimit:
-                      type: string
+                    resources:
+                      type: object
+                      properties:
+                        requests:
+                          type: object
+                          properties:
+                            cpu:
+                              type: string
+                            memory:
+                              type: string
+                        limits:
+                          type: object
+                          properties:
+                            cpu:
+                              type: string
+                            memory:
+                              type: string
                     minReplicas:
                       type: integer
                       format: int64
